FIX| darkmode flicker resolved damn... cookies are good

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: blue;
 }
 
 header > .nav_container {
@@ -61,7 +60,6 @@ header > .nav_container {
   width: min(700px, 100%);
   justify-content: space-between;
   align-items: center;
-  background: red;
 }
 
 .container {
